config/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: <PROJECT>-catalog-service
  namespace: <PROJECT>
  labels:
    app: <PROJECT>-catalog-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: <PROJECT>-catalog-service
  template:
    metadata:
      labels:
        app: <PROJECT>-catalog-service
    spec:
      containers:
        - image: <CONTAINER>
          name: <PROJECT>-catalog-service
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http-server
      imagePullSecrets:
        - name: bluemix-calculator-secret
