config/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: gan-catalog-service
#  namespace: gan
  labels:
    app: gan-catalog-service
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: gan-catalog-service
